--- a/index.html
+++ b/index.html
@@ -17,6 +17,27 @@
     <title>Dropbox</title>
 </head>
 <body>
-    
+    <!-- HEADER -->
+    <header class="debug">
+        <!-- NAVBAR -->
+        <nav class="flex debug">
+            <div class="sidenav left debug">
+
+            </div>
+            <div class="sidenav right debug">
+
+            </div>
+        </nav>
+        <!-- JUMBOTRON -->
+        <div class="jumbotron debug">
+            <div class="container big flex">
+                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+                <div class="row flex debug">
+                    <div class="description debug"></div>
+                    <figure class="debug"></figure>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
