--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <!-- HEADER -->
-    <header class="debug">
+    <header class="mb-150 debug">
         <!-- NAVBAR -->
         <nav class="flex debug">
             <div class="sidenav left debug">
@@ -31,7 +31,7 @@
         <!-- JUMBOTRON -->
         <div class="jumbotron debug">
             <div class="container big flex">
-                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+                <h1 class="mb-50">Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
                 <div class="row flex debug">
                     <div class="description debug"></div>
                     <figure class="debug"></figure>
@@ -39,5 +39,34 @@
             </div>
         </div>
     </header>
+
+    <!-- MAIN -->
+    <main>
+        <!-- BUSINESS PLAN SECTION -->
+        <section class="business-plan container mb-150 debug">
+            <h2 class="mb-50 debug">Trova il piano business che fa per te</h2>
+            <div class="option-selection mb-50 debug">
+
+            </div>
+            <div class="row flex mb-50 debug">
+                <div class="col debug">
+                    <div class="plan-type debug"></div>
+                    <div class="content debug">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur voluptatum temporibus odio modi? Neque, consectetur inventore? Fuga delectus magnam aspernatur repudiandae consequatur? Dolore quibusdam fugiat doloremque beatae a, cumque exercitationem. </div>
+                </div>
+                <div class="col debug">
+                    <div class="plan-type debug"></div>
+                    <div class="content debug">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque eligendi, dolor natus porro dolores corporis quia, magnam fugiat eaque necessitatibus a vero eius animi perspiciatis! Veritatis unde adipisci deleniti consequatur.</div>
+                </div>
+                <div class="col debug">
+                    <div class="plan-type debug"></div>
+                    <div class="content debug">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates eaque eveniet provident distinctio a perspiciatis consequuntur hic, temporibus dolorem aut, asperiores voluptatum ipsum minima inventore accusamus! Maiores sunt id incidunt?</div>
+                </div>
+            </div>
+            <div class="row debug">
+                <div class="plan-type debug"></div>
+                <div class="content debug"></div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
