added partner section structure

--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
                 <div class="content debug"></div>
             </div>
         </section>
+        <!-- PARTNER SECTION -->
+        <section class="partner container flex mb-150 debug">
+            <figure class="debug"></figure>
+            <div class="description debug"></div>
+        </section>
     </main>
 </body>
 </html>
