added operations section

--- a/index.html
+++ b/index.html
@@ -72,6 +72,20 @@
             <figure class="debug"></figure>
             <div class="description debug"></div>
         </section>
+        <!-- OPERATIONS SECTION -->
+        <section class="operations container mb-150 debug">
+            <h2 class="mb-50">Esegui più operazioni con Dropbox Business</h2>
+            <div class="row flex mb-50 debug">
+                <div class="column debug"></div>
+                <div class="column debug"></div>
+                <div class="column debug"></div>
+            </div>
+            <div class="row flex debug">
+                <div class="column debug"></div>
+                <div class="column debug"></div>
+                <div class="column debug"></div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
