added customers section

--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
                 <div class="column debug"></div>
             </div>
         </section>
+        <!-- CUSTOMERS SECTION -->
+        <section class="customers container mb-150 debug">
+            <h2 class="mb-50">Più di 500.000 team utilizzano <br> Dropbox Business</h2>
+            <a href="#">Scopri di più sui nostri clienti</a>
+        </section>
     </main>
 </body>
 </html>
