added review section structure

--- a/index.html
+++ b/index.html
@@ -91,6 +91,22 @@
             <h2 class="mb-50">Più di 500.000 team utilizzano <br> Dropbox Business</h2>
             <a href="#">Scopri di più sui nostri clienti</a>
         </section>
+        <!-- REVIEWs SECTION -->
+        <section class="reviews flex mb-50 debug">
+            <div class="reviewers flex debug">
+                <div class="reviewer-logo debug" id="designit"></div>
+                <div class="reviewer-logo debug" id="asu"></div>
+                <div class="reviewer-logo debug" id="uf"></div>
+                <div class="reviewer-logo debug" id="topps"></div>
+            </div>
+            <div class="feedback debug"></div>
+            <div class="reviewers flex debug">
+                <div class="reviewer-logo debug" id="world-bicycle"></div>
+                <div class="reviewer-logo debug" id="hearst"></div>
+                <div class="reviewer-logo debug" id="lonely-planet"></div>
+                <div class="reviewer-logo debug" id="clear-channel"></div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
