--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
             <h2 class="mb-50">Più di 500.000 team utilizzano <br> Dropbox Business</h2>
             <a href="#">Scopri di più sui nostri clienti</a>
         </section>
-        <!-- REVIEWs SECTION -->
-        <section class="reviews flex mb-50 debug">
+        <!-- REVIEWS SECTION -->
+        <section class="reviews flex debug">
             <div class="reviewers flex debug">
                 <div class="reviewer-logo debug" id="designit"></div>
                 <div class="reviewer-logo debug" id="asu"></div>
@@ -105,6 +105,17 @@
                 <div class="reviewer-logo debug" id="hearst"></div>
                 <div class="reviewer-logo debug" id="lonely-planet"></div>
                 <div class="reviewer-logo debug" id="clear-channel"></div>
+            </div>
+        </section>
+        <!-- FREE TRIAL SECTION -->
+        <section class="free-trial mb-150 debug">
+            <div class="container flex debug">
+                <div class="title debug">
+                    <h2>Porta Dropbox Business nella tua azienda.</h2>
+                </div>
+                <div class="action debug">
+                    <button>Inizia la tua prova gratuita</button>
+                </div>
             </div>
         </section>
     </main>
