added faq section structure

--- a/index.html
+++ b/index.html
@@ -118,6 +118,27 @@
                 </div>
             </div>
         </section>
+        <!-- FAQ SECTION -->
+        <section class="faq container mb-150 debug">
+            <h2 class="mb-50">Domande frequenti</h2>
+            <hr>
+            <div class="row flex">
+                <span>Qual è la differenza tra Dropbox Business standard e Dropbox Business Advanced?</span>
+                <i class="fa-solid fa-angle-down"></i>
+            </div>
+            <hr>
+            <div class="row flex">
+                <span>Qual è la differenza tra Dropbox Business standard e Dropbox Business Advanced?</span>
+                <i class="fa-solid fa-angle-down"></i>
+            </div>
+            <hr>
+            <div class="row flex">
+                <span>Qual è la differenza tra Dropbox Business standard e Dropbox Business Advanced?</span>
+                <i class="fa-solid fa-angle-down"></i>
+            </div>
+            <hr>
+            
+        </section>
     </main>
 </body>
 </html>
