added footer structure

--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
         <section class="operations container mb-150 debug">
             <h2 class="mb-50">Esegui più operazioni con Dropbox Business</h2>
             <div class="row flex mb-50 debug">
-                <div class="column debug"></div>
-                <div class="column debug"></div>
-                <div class="column debug"></div>
+                <div class="col debug"></div>
+                <div class="col debug"></div>
+                <div class="col debug"></div>
             </div>
             <div class="row flex debug">
-                <div class="column debug"></div>
-                <div class="column debug"></div>
-                <div class="column debug"></div>
+                <div class="col debug"></div>
+                <div class="col debug"></div>
+                <div class="col debug"></div>
             </div>
         </section>
         <!-- CUSTOMERS SECTION -->
@@ -119,7 +119,7 @@
             </div>
         </section>
         <!-- FAQ SECTION -->
-        <section class="faq container mb-150 debug">
+        <section class="faq container debug">
             <h2 class="mb-50">Domande frequenti</h2>
             <hr>
             <div class="row flex">
@@ -137,8 +137,24 @@
                 <i class="fa-solid fa-angle-down"></i>
             </div>
             <hr>
-            
         </section>
     </main>
+    <!-- FOOTER -->
+    <footer class="debug white">
+        <div class="container big debug white">
+            <div class="footer-top flex debug white">
+                <div class="col debug white"></div>
+                <div class="col debug white"></div>
+                <div class="col debug white"></div>
+                <div class="col debug white"></div>
+                <div class="col debug white"></div>
+            </div>
+            <div class="footer-bottom debug white">
+                <div class="language-selection debug white">
+
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
