--- a/index.html
+++ b/index.html
@@ -18,23 +18,40 @@
 </head>
 <body>
     <!-- HEADER -->
-    <header class="mb-150 debug">
+    <header class="mb-150">
         <!-- NAVBAR -->
-        <nav class="flex debug">
-            <div class="sidenav left debug">
-
+        <nav class="flex">
+            <div class="sidenav left flex">
+                <a href="#" class="logo flex"><img src="img/logo-small.png" alt="dropbox-logo"></a>
+            <ul class="flex">
+                <li><a href="#" class="link">Perchè Dropbox</a></li>
+                <li><a href="#" class="link">Funzioni</a></li>
+                <li><a href="#" class="link">Piani e Prezzi</a></li>
+            </ul>
             </div>
-            <div class="sidenav right debug">
-
+            <div class="sidenav right flex">
+                <ul class="flex">
+                    <li><a href="#" class="link">Supporto</a></li>
+                    <li><a href="#" class="link">Contatta l'ufficio vendite</a></li>
+                    <li><a href="#" class="link">Accedi</a></li>
+                    <li><a href="#" class="button">Inizia</a></li>
+                </ul>
             </div>
         </nav>
         <!-- JUMBOTRON -->
-        <div class="jumbotron debug">
+        <div class="jumbotron">
             <div class="container big flex">
                 <h1 class="mb-50">Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
-                <div class="row flex debug">
-                    <div class="description debug"></div>
-                    <figure class="debug"></figure>
+                <div class="row flex">
+                    <div class="description">
+                        <p class="mb-20">Finalmente tutti i tuoi strumenti, contenuti e collaborazioni sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
+                        <a href="#" class="button mb-20">Inizia la tua prova gratuita</a>
+                        <div class="mb-50">Annulla in qualsiasi momento</div>
+                        <i class="fa-solid fa-arrow-down fa-3x"></i>
+                    </div>
+                    <figure>
+                        <img src="img/jumbo.png" alt="Proposal">
+                    </figure>
                 </div>
             </div>
         </div>
