added partner section

--- a/index.html
+++ b/index.html
@@ -178,9 +178,16 @@
             </div>
         </section>
         <!-- PARTNER SECTION -->
-        <section class="partner container flex mb-150 debug">
-            <figure class="debug"></figure>
-            <div class="description debug"></div>
+        <section class="partner container flex mb-150">
+            <figure>
+                <img src="img/partner.png" alt="Partner">
+            </figure>
+            <div class="description">
+                <h3 class="mb-15">Entra in contatto con un partner Dropbox</h3>
+                <div class="mb-20">Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui</div>
+                <a href="#" class="button white">Trova un partner</a>
+
+            </div>
         </section>
         <!-- OPERATIONS SECTION -->
         <section class="operations container mb-150 debug">
