finished operations and customer sections

--- a/index.html
+++ b/index.html
@@ -190,21 +190,45 @@
             </div>
         </section>
         <!-- OPERATIONS SECTION -->
-        <section class="operations container mb-150 debug">
+        <section class="operations container mb-150">
             <h2 class="mb-50">Esegui più operazioni con Dropbox Business</h2>
-            <div class="row flex mb-50 debug">
-                <div class="col debug"></div>
-                <div class="col debug"></div>
-                <div class="col debug"></div>
+            <div class="row flex mb-50">
+                <div class="col">
+                    <img src="img/business-feature-switching-tools.png" alt="switch tool">
+                    <h3 class="mb-15">Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox paper direttamente da Dropbox</p>
+                </div>
+                <div class="col">
+                    <img src="img/business-feature-send-files-it.png" alt="switch tool">
+                    <h3 class="mb-15">Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox paper direttamente da Dropbox</p>
+                </div>
+                <div class="col">
+                    <img src="img/business-feature-coordinate-it.png" alt="switch tool">
+                    <h3 class="mb-15">Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox paper direttamente da Dropbox</p>
+                </div>
             </div>
-            <div class="row flex debug">
-                <div class="col debug"></div>
-                <div class="col debug"></div>
-                <div class="col debug"></div>
+            <div class="row flex">
+                <div class="col">
+                    <img src="img/business-feature-integrations-it.png" alt="switch tool">
+                    <h3 class="mb-15">Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox paper direttamente da Dropbox</p>
+                </div>
+                <div class="col">
+                    <img src="img/business-feature-multi-device.png" alt="switch tool">
+                    <h3 class="mb-15">Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox paper direttamente da Dropbox</p>
+                </div>
+                <div class="col">
+                    <img src="img/business-feature-security.png" alt="switch tool">
+                    <h3 class="mb-15">Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox paper direttamente da Dropbox</p>
+                </div>
             </div>
         </section>
         <!-- CUSTOMERS SECTION -->
-        <section class="customers container mb-150 debug">
+        <section class="customers container mb-150">
             <h2 class="mb-50">Più di 500.000 team utilizzano <br> Dropbox Business</h2>
             <a href="#">Scopri di più sui nostri clienti</a>
         </section>
