finished review section

--- a/index.html
+++ b/index.html
@@ -233,19 +233,39 @@
             <a href="#">Scopri di più sui nostri clienti</a>
         </section>
         <!-- REVIEWS SECTION -->
-        <section class="reviews flex debug">
-            <div class="reviewers flex debug">
-                <div class="reviewer-logo debug" id="designit"></div>
-                <div class="reviewer-logo debug" id="asu"></div>
-                <div class="reviewer-logo debug" id="uf"></div>
-                <div class="reviewer-logo debug" id="topps"></div>
+        <section class="reviews flex">
+            <div class="reviewers flex">
+                <div class="reviewer-logo flex" id="designit">
+                    <img src="img/designit.svg" alt="designit">
+                </div>
+                <div class="reviewer-logo flex" id="asu">
+                    <img src="img/arizona_state_university.svg" alt="A.S.U.">
+                </div>
+                <div class="reviewer-logo flex" id="uf">
+                    <img src="img/university_of_florida.svg" alt="U.o.F.">
+                </div>
+                <div class="reviewer-logo flex" id="topps">
+                    <img src="img/topps.svg" alt="topps">
+                </div>
             </div>
-            <div class="feedback debug"></div>
-            <div class="reviewers flex debug">
-                <div class="reviewer-logo debug" id="world-bicycle"></div>
-                <div class="reviewer-logo debug" id="hearst"></div>
-                <div class="reviewer-logo debug" id="lonely-planet"></div>
-                <div class="reviewer-logo debug" id="clear-channel"></div>
+            <div class="feedback">
+                <img src="img/designit.svg" alt="designit" class="mb-100">
+                <p class="mb-50">"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper"</p>
+                <span>Morthen Thomsen, Global IT Lead</span>
+            </div>
+            <div class="reviewers flex">
+                <div class="reviewer-logo flex" id="world-bicycle">
+                    <img src="img/world_bicycle_relief.svg" alt="world-bicycle">
+                </div>
+                <div class="reviewer-logo flex" id="hearst">
+                    <img src="img/hearst_corp.svg" alt="hearst">
+                </div>
+                <div class="reviewer-logo flex" id="lonely-planet">
+                    <img src="img/lonely_planet.svg" alt="">
+                </div>
+                <div class="reviewer-logo flex" id="clear-channel">
+                    <img src="img/clear_channel.svg" alt="clear-channel">
+                </div>
             </div>
         </section>
         <!-- FREE TRIAL SECTION -->
