--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- FONTAWESOME -->
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css' integrity='sha512-HHsOC+h3najWR7OKiGZtfhFIEzg5VRIPde0kB0bG2QRidTQqf+sbfcxCTB16AcFB93xMjnBIKE29/MjdzXE+qw==' crossorigin='anonymous'/>
+    <!-- FONTAWESOME CSS IMPORT -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css">
     <!-- FONT OPEN SANS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
-    <!-- FONTAWESOME CSS IMPORT -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css">
 </link>
     <!-- STYLESHEET -->
     <link rel="stylesheet" href="css/styles.css">
@@ -269,18 +269,18 @@
             </div>
         </section>
         <!-- FREE TRIAL SECTION -->
-        <section class="free-trial mb-150 debug">
-            <div class="container flex debug">
-                <div class="title debug">
+        <section class="free-trial mb-150">
+            <div class="container flex">
+                <div class="title">
                     <h2>Porta Dropbox Business nella tua azienda.</h2>
                 </div>
-                <div class="action debug">
-                    <button>Inizia la tua prova gratuita</button>
+                <div class="action">
+                    <a href="#" class="button white">Inizia la tua prova gratuita</a>
                 </div>
             </div>
         </section>
         <!-- FAQ SECTION -->
-        <section class="faq container debug">
+        <section class="faq container">
             <h2 class="mb-50">Domande frequenti</h2>
             <hr>
             <div class="row flex">
