--- a/index.html
+++ b/index.html
@@ -301,18 +301,67 @@
         </section>
     </main>
     <!-- FOOTER -->
-    <footer class="debug white">
-        <div class="container big debug white">
-            <div class="footer-top flex debug white">
-                <div class="col debug white"></div>
-                <div class="col debug white"></div>
-                <div class="col debug white"></div>
-                <div class="col debug white"></div>
-                <div class="col debug white"></div>
+    <footer>
+        <div class="container big">
+            <div class="footer-top flex">
+                <div class="col">
+                    <h3 class="mb-20">Dropbox</h3>
+                    <ul>
+                        <li><a href="#">Applicazione desktop</a></li>
+                        <li><a href="#">Perchè Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Funzioni</a></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h3 class="mb-20">Prodotti</h3>
+                    <ul>
+                        <li><a href="#">Applicazione desktop</a></li>
+                        <li><a href="#">Perchè Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Funzioni</a></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h3 class="mb-20">Azienda</h3>
+                    <ul>
+                        <li><a href="#">Applicazione desktop</a></li>
+                        <li><a href="#">Perchè Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Funzioni</a></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h3 class="mb-20">Supporto</h3>
+                    <ul>
+                        <li><a href="#">Applicazione desktop</a></li>
+                        <li><a href="#">Perchè Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Funzioni</a></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h3 class="mb-20">Community</h3>
+                    <ul>
+                        <li><a href="#">Applicazione desktop</a></li>
+                        <li><a href="#">Perchè Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Funzioni</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="footer-bottom debug white">
-                <div class="language-selection debug white">
-
+            <div class="footer-bottom">
+                <div class="language-selection flex">
+                    <i class="fa-solid fa-earth-americas"></i>
+                    <select name="language" id="language">
+                        <option value="Italian">Italiano</i></option>
+                    </select>
+                    <i class="fa-solid fa-caret-up fa-xs"></i>
                 </div>
             </div>
         </div>
