adjusted button hover and added arrow animation

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         </nav>
         <!-- JUMBOTRON -->
-        <div class="jumbotron">
+        <div id="jumbotron">
             <div class="container big flex">
                 <h1 class="mb-50">Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
                 <div class="row flex">
@@ -50,7 +50,7 @@
                         <p class="mb-20">Finalmente tutti i tuoi strumenti, contenuti e collaborazioni sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
                         <a href="#" class="button mb-20">Inizia la tua prova gratuita</a>
                         <div class="mb-50">Annulla in qualsiasi momento</div>
-                        <i class="fa-solid fa-arrow-down fa-3x"></i>
+                        <a href="#free-trial"><i class="fa-solid fa-arrow-down fa-3x"></i></a>
                     </div>
                     <figure>
                         <img src="img/jumbo.png" alt="Proposal">
@@ -63,7 +63,7 @@
     <!-- MAIN -->
     <main>
         <!-- BUSINESS PLAN SECTION -->
-        <section class="business-plan container mb-150">
+        <section id="business-plan" class="container mb-150">
             <h2 class="mb-50">Trova il piano business che fa per te</h2>
             <div class="option-selection flex mb-50">
                 <div class="circle selected"></div>
@@ -178,7 +178,7 @@
             </div>
         </section>
         <!-- PARTNER SECTION -->
-        <section class="partner container flex mb-150">
+        <section id="partner" class="container flex mb-150">
             <figure>
                 <img src="img/partner.png" alt="Partner">
             </figure>
@@ -190,7 +190,7 @@
             </div>
         </section>
         <!-- OPERATIONS SECTION -->
-        <section class="operations container mb-150">
+        <section id="operations" class="container mb-150">
             <h2 class="mb-50">Esegui più operazioni con Dropbox Business</h2>
             <div class="row flex mb-50">
                 <div class="col">
@@ -228,12 +228,12 @@
             </div>
         </section>
         <!-- CUSTOMERS SECTION -->
-        <section class="customers container mb-150">
+        <section id="customers" class="container mb-150">
             <h2 class="mb-50">Più di 500.000 team utilizzano <br> Dropbox Business</h2>
             <a href="#">Scopri di più sui nostri clienti</a>
         </section>
         <!-- REVIEWS SECTION -->
-        <section class="reviews flex">
+        <section id="reviews" class="reviews flex">
             <div class="reviewers flex">
                 <div class="reviewer-logo flex" id="designit">
                     <img src="img/designit.svg" alt="designit">
@@ -269,7 +269,7 @@
             </div>
         </section>
         <!-- FREE TRIAL SECTION -->
-        <section class="free-trial mb-150">
+        <section id="free-trial" class="mb-150">
             <div class="container flex">
                 <div class="title">
                     <h2>Porta Dropbox Business nella tua azienda.</h2>
@@ -280,7 +280,7 @@
             </div>
         </section>
         <!-- FAQ SECTION -->
-        <section class="faq container">
+        <section id="faq" class="container">
             <h2 class="mb-50">Domande frequenti</h2>
             <hr>
             <div class="row flex">
