added faq dropdown - end

--- a/index.html
+++ b/index.html
@@ -287,16 +287,19 @@
                 <span>Qual è la differenza tra Dropbox Business standard e Dropbox Business Advanced?</span>
                 <i class="fa-solid fa-angle-down"></i>
             </div>
+            <div class="faq-answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, nemo id officiis adipisci ducimus maxime labore dignissimos praesentium maiores at velit esse laborum aliquam. Alias saepe corrupti consequuntur distinctio quasi!</div>
             <hr>
             <div class="row flex">
                 <span>Qual è la differenza tra Dropbox Business standard e Dropbox Business Advanced?</span>
                 <i class="fa-solid fa-angle-down"></i>
             </div>
+            <div class="faq-answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, nemo id officiis adipisci ducimus maxime labore dignissimos praesentium maiores at velit esse laborum aliquam. Alias saepe corrupti consequuntur distinctio quasi!</div>
             <hr>
             <div class="row flex">
                 <span>Qual è la differenza tra Dropbox Business standard e Dropbox Business Advanced?</span>
                 <i class="fa-solid fa-angle-down"></i>
             </div>
+            <div class="faq-answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, nemo id officiis adipisci ducimus maxime labore dignissimos praesentium maiores at velit esse laborum aliquam. Alias saepe corrupti consequuntur distinctio quasi!</div>
             <hr>
         </section>
     </main>
